--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <!-- saved from url=(0029)http://we.99bitgongchang.org/ -->
-<html><style type="text/css" id="__360se6_success_css"></style><head><meta http-equiv="Content-Type" content="text/html; charset=GBK">
+<html><head>
 <title>当我在过假期的时候我在过些什么</title>
 
-<style type="text/css">* { margin:0; }A:link {. COLOR: #069 ;}
-a{ color:#333; text-decoration:none;}</style>
+
+<meta http-equiv="Content-Type" content="text/html; charset=gbk" />
+<STYLE type=text/css>* { margin:0; }A:link {. COLOR: #069 ;}
+a{ color:#333; text-decoration:none;}</STYLE>
+
 </head>
 
 <body bgcolor="#f9fafb">
