--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>当我在过假期的时候我在过些什么</title>
-<meta http-equiv="Content-Type" content="text/html; charset=gbk" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf8" />
 <STYLE type=text/css>* { margin:0; }A:link {. COLOR: #069 ;}
 a{ color:#333; text-decoration:none;}</STYLE>
 </head>
