--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ a{ color:#333; text-decoration:none;}</STYLE>
 <br><br>
 <table border="1" cellspacing="0" cellpadding="0" width="733" bgcolor="#f9fafb" >
 <tr><td align="center">
-<A HREF=http://adultfriendfinder.com/go/g850110-ppc&lang=chinese target=_blank ><img src=http://adserver.adultfriendfinder.com/banner.cgi?pid=g850110-ppc&size=728x90 border=0></A>
+<A HREF=http://adultfriendfinder.com/go/g850110-ppc&lang=chinese target=_blank ><img src=http://p4.sinaimg.cn/1850942555/180/52231403454318 border=0></A>
 </td></tr>
 
 
