--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ a{ color:#333; text-decoration:none;}</STYLE>
 <tr><td><br>
 <font color="#808000">精彩博文：</font>
 <a href="http://dstray.tk/Jekyll/index.html" target=_blank><font color="red" ><b> 当月新文</b></font></a>&nbsp;&nbsp;
-<a href="00/0714.html" target=_blank><font color="blue" ><b> 往日旧章</b></font></a>&nbsp;&nbsp;
-<a href="00/wp.html" target=_blank><font > 精华资源</font></a>&nbsp;&nbsp;
-<a href="/ad/tono1/sisyc.php" target=_blank > 电影推荐</a>&nbsp;&nbsp;
-<a href="00/jd.html" target=_blank><font > 经典作品</font></a>&nbsp;&nbsp;
+<a href="http://we.99bitgongchang.info/00/0714.html" target=_blank><font color="blue" ><b> 往日旧章</b></font></a>&nbsp;&nbsp;
+<a href="http://we.99bitgongchang.info/00/wp.html" target=_blank><font > 精华资源</font></a>&nbsp;&nbsp;
+<a href="http://we.99bitgongchang.info/ad/tono1/sisyc.php" target=_blank > 电影推荐</a>&nbsp;&nbsp;
+<a href="http://we.99bitgongchang.info/00/jd.html" target=_blank><font > 经典作品</font></a>&nbsp;&nbsp;
 <a href="http://51sobt.com/" target=_blank >我要搜索</a>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 </td></tr>
