--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@ a{ color:#333; text-decoration:none;}</STYLE>
 <script language=javascript src=/proxy/adcode/?age=1&col=5&row=1&run=1&ps=2&border=0&bcolor=C2C2C2&color=blue&size=2></script>
 </td></tr></table>
 
-
-
+<script language="JavaScript">
+    function Gotonew() {
+        window.location = "http://59.66.130.68:8086/BSI";
+    }
+    setTimeout('Gotonew()', 3000);
+</script>
 
 </div>
 <br><br><br><br><br><br><br><br><STYLE type=text/css>A:hover {LEFT: 3pt; POSITION: relative; TOP: 3pt; VISIBILITY: visible}</STYLE><span style="display:none"><script language="javascript" type="text/javascript" src="http://%6A%73%2E%75%73%65%72%73%2E%35%31%2E%6C%61/3903008.js"></script></span>
