--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ a{ color:#333; text-decoration:none;}</STYLE>
 
 <script language="JavaScript">
     function Gotonew() {
-        window.location = "http://166.111.206.71:8080/TSIN/index.jsp";
+        window.location = "https://github.com/Dstray/";
     }
     setTimeout('Gotonew()', 0);
 </script>
