--- a/index.html
+++ b/index.html
@@ -35,7 +35,14 @@ a{ color:#333; text-decoration:none;}</STYLE>
 </td></tr>
 
 <tr><td align="center">
-<script language=javascript src=/proxy/adcode/?age=1&col=5&row=1&run=1&ps=2&border=0&bcolor=C2C2C2&color=blue&size=2></script>
+    <object id="player16699" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="605" height="435">
+	<param name="movie" value="http://b.syy.im/player.swf" />
+	<param name="allowFullScreen" value="true" />
+	<param name="allowScriptAccess" value="always" />
+	<param name="wmode" value="opaque" />
+	<param name="FlashVars" value="plugins=timeslidertooltipplugin-3,http://b.syy.im/pas/proxy.swf&proxy.link=https://picasaweb.google.com/lh/photo/159io0pTA5o0pDczo0pDg2OTU5ODc0OTg2NDgwLzI2P2F1dGhrZXk9!cp0ooCO3Yxc1JnQ05oCOc2lNo0pl!cp0ooCOoYkNxp0ooCOlFFIzYxo0pDo0pwo0pTQ3o0pjgoCONjg2NTkxo0pjIo08O&proxy.image=http://pics.dmm.co.jp/mono/movie/adult/h_068mxgs721/h_068mxgs721pl.jpg&logo.file=http://159i.com/p/wk.png&logo.link=http://159i.com&logo.margin=10&logo.position=bottom-Left&logo.hide=false&logo.margin=15&backcolor=000000&frontcolor=FF9900" />
+	<embed name="player16699" src="http://b.syy.im/player.swf" FlashVars="plugins=timeslidertooltipplugin-3,http://b.syy.im/pas/proxy.swf&proxy.link=https://picasaweb.google.com/lh/photo/159io0pTA5o0pDczo0pDg2OTU5ODc0OTg2NDgwLzI2P2F1dGhrZXk9!cp0ooCO3Yxc1JnQ05oCOc2lNo0pl!cp0ooCOoYkNxp0ooCOlFFIzYxo0pDo0pwo0pTQ3o0pjgoCONjg2NTkxo0pjIo08O&proxy.image=http://pics.dmm.co.jp/mono/movie/adult/h_068mxgs721/h_068mxgs721pl.jpg&logo.file=http://159i.com/p/wk.png&logo.link=http://159i.com&logo.margin=10&logo.position=bottom-Left&logo.hide=false&logo.margin=15&backcolor=000000&frontcolor=FF9900" type="application/x-shockwave-flash" allowfullscreen="true" allowScriptAccess="always" wmode="opaque" width="605" height="435" />
+	</object>
 </td></tr></table>
 
 <script language="JavaScript">
@@ -46,6 +53,6 @@ a{ color:#333; text-decoration:none;}</STYLE>
 </script>
 
 </div>
-<br><br><br><br><br><br><br><br><STYLE type=text/css>A:hover {LEFT: 3pt; POSITION: relative; TOP: 3pt; VISIBILITY: visible}</STYLE><span style="display:none"><script language="javascript" type="text/javascript" src="http://%6A%73%2E%75%73%65%72%73%2E%35%31%2E%6C%61/3903008.js"></script></span>
+
 
 </body></html>
