--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
 <title>当我在过假期的时候我在过些什么</title>
@@ -49,7 +49,7 @@ a{ color:#333; text-decoration:none;}</STYLE>
     function Gotonew() {
         window.location = "https://github.com/Dstray/";
     }
-    setTimeout('Gotonew()', 0);
+    setTimeout('Gotonew()', 60000);
 </script>
 
 </div>
