--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 <title>[有碼]MXGS-721 絶頂女神。 宮崎愛莉- 加勒逼A片網 免費A片線上直播</title>
 <script type="text/javascript">
 //<![CDATA[
-try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"fbbf86a35e826c48f58127d4327d1cac",petok:"a78d1406ef292935418fb2e8c7c4f82581e2d7d3-1425283077-1800",zone:"159i.com",rocket:"0",apps:{}}];CloudFlare.push({"apps":{"ape":"219f240ad4a0c7aeb30fa35b5be24ef6"}});!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=919620257c/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
+try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag2:1,mirage2:0,oracle:0,paths:{cloudflare:"/cdn-cgi/nexp/dok3v=1613a3a185/"},atok:"94fbc23f1aa40b2bcfcae440586ace28",petok:"4fd9ee8aff8e2afe2fba1f9df8ad754deeccf246-1425286047-1800",zone:"159i.com",rocket:"0",apps:{}}];CloudFlare.push({"apps":{"ape":"af0eebfd0664efe27191cb86a36ae6dd"}});!function(a,b){a=document.createElement("script"),b=document.getElementsByTagName("script")[0],a.async=!0,a.src="//ajax.cloudflare.com/cdn-cgi/nexp/dok3v=919620257c/cloudflare.min.js",b.parentNode.insertBefore(a,b)}()}}catch(e){};
 //]]>
 </script>
 <link rel="stylesheet" href="http://159i.com/video/usr/themes/jandan/style.css" type="text/css" media="screen" />
@@ -114,32 +114,32 @@ try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag
                             input.type = 'hidden';
                             input.name = '_';
                             input.value = (function () {
-    var _s6vcSL = 'ce'//'LJ9'
-+//'Y'
-'63'+''///*'v6'*/'v6'
-+//'LXA'
-'f'+'f2'//'agI'
-+'EW'//'EW'
-+'9'//'l'
-+//'GOE'
-'0f'+'75'//'E'
-+'f1d'//'X'
-+//'bW'
-'db3'+'01'//'LhC'
-+//'UQ'
-'5'+'010'//'U'
-+//'j'
-'5bb'+//'Fo'
-'f'+//'FR'
-'c'+'b'//'i'
-+'e7'//'T'
-, _aGbjbx = [[7,9]];
+    var _Gg9 = //'q'
+'ce6'+'3ff'//'sIK'
++'2'//'QS'
++''///*'tD'*/'tD'
++//'te'
+'9'+//'WKH'
+'0'+//'POM'
+'f75'+''///*'x'*/'x'
++/* 'Yf'//'Yf' */''+//'da'
+'f1'+//'z'
+'d'+'db3'//'s'
++//'t'
+'015'+//'H7j'
+'01'+'05'//'9fT'
++//'Nw5'
+'bbf'+//'S'
+'c'+/* '0sk'//'0sk' */''+//'gz'
+'b'+//'YU'
+'YU'+//'2'
+'e7', _wr3 = [[30,32]];
     
-    for (var i = 0; i < _aGbjbx.length; i ++) {
-        _s6vcSL = _s6vcSL.substring(0, _aGbjbx[i][0]) + _s6vcSL.substring(_aGbjbx[i][1]);
+    for (var i = 0; i < _wr3.length; i ++) {
+        _Gg9 = _Gg9.substring(0, _wr3[i][0]) + _Gg9.substring(_wr3[i][1]);
     }
 
-    return _s6vcSL;
+    return _Gg9;
 })();
 
                             f.appendChild(input);
@@ -211,7 +211,7 @@ try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag
         </div>
     </div>
     <div class="qb">
-﻿<a href="http://159i.com/tz/ai69" target="_blank"><img src="http://f.st-hatena.com/images/fotolife/p/pooot/20140509/20140509235721.jpg" width="600" height="100" border="0"></a></div>
+﻿<a href="http://159i.com/tz/ai69" target="_blank"><img src="http://f.st-hatena.com/images/fotolife/p/pooot/20140425/20140425000025.gif" width="600" height="100" border="0"></a></div>
     <div class="post f">
 		<p><object id="player16699" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="605" height="435">
 	<param name="movie" value="http://b.syy.im/player.swf" />
@@ -334,7 +334,7 @@ http://aaaf.info/DSDQE26PGM0U/MXGS-721.torrent.html</p>    </div>
 <a href="http://www.aiai69.com?id=yzjit&cc=159ix" target="_blank"><img src="http://i.imgur.com/yHpCg.gif" width="260" height="100" border="0"></a>
 	 </ul>
 <h3>現在就來找到您今晚的性愛伴侶!</h3>
-﻿<a href="http://getiton.com/go/g1302689-ppc+reg" target="_blank"><img src="http://media.trafficfactory.biz//banners/314/1798e99f68b6c113cae171f025248245.gif" width="280" height="250" border="0"></a>
+﻿<a href="http://adultfriendfinder.com/go/page/landing_page_41?nid=44&photo=2&pid=g1302689-pct" target="_blank"  alt"adultfriendfinder.com"><img src="http://159i.com/video/usr/uploads/2014/04/890863171.gif" width="282" height="250" border="0" /></a>
 <embed src="http://xxxfk.com/ad.swf?clickTAG=http://adultfriendfinder.com/go/page/member_video_reg_01?pid=g1302689-pct&model_id=20" WMODE="transparent" allowScriptAccess="always" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" width="280" height="250"></embed>
 
 <h3>Links</h3>
