--- a/gkplugins/index.html
+++ b/gkplugins/index.html
@@ -3,7 +3,7 @@
 <param name="allowFullScreen" value="true" />
 <param name="allowScriptAccess" value="always" />
 <param name="FlashVars" value="plugins=plugins/proxy.swf&proxy.link=http://free.javhd.com/embed/?id=7046" />
-<embed name="flashplayer" src="player.swf" FlashVars="plugins=plugins/proxy.swf&proxy.link=http://javhd.com/embed/?id=12382" type="application/x-shockwave-flash" allowfullscreen="true" allowScriptAccess="always" width="600" height="400" />
+<embed name="flashplayer" src="player.swf" FlashVars="plugins=plugins/proxy.swf&proxy.link=http://free.javhd.com/embed/?id=12382" type="application/x-shockwave-flash" allowfullscreen="true" allowScriptAccess="always" width="600" height="400" />
 </object>
 <br/>
 use account:<br/>
