--- a/gkplugins/index.html
+++ b/gkplugins/index.html
@@ -19,3 +19,15 @@ use Box menu:<br/>
 - open plugins/pluginslist.xml<br/>
 - replace gkplugins_javhd.swf to gkplugins_javhd.swf?boxmenu=true<br/>
 - config layout same as config on plugin youtube
+<script src="http://jwpsrv.com/library/u5D4kFpnEeSA+iIACy4B0g.js"></script>
+<div id='playerTYictkBuNQjW'></div>
+<script type='text/javascript'>
+    jwplayer('playerTYictkBuNQjW').setup({
+        file: 'https://ph2dot.dl.openload.io/dl/l/3gdfWQ70_TU/heyzo0921.mp4',
+        image: '//www.longtailvideo.com/content/images/jw-player/lWMJeVvV-876.jpg',
+        title: 'HEYZO 0921',
+        width: '100%',
+        aspectratio: '16:9',
+        primary: 'flash'
+    });
+</script>
