--- a/player.html
+++ b/player.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
-  <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/skin/pink.flag/css/jplayer.pink.flag.min.css" rel="stylesheet" />
+  <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/skin/blue.monday/css/jplayer.blue.monday.min.css" rel="stylesheet" />
   <style type="text/css">
     #jp_container_1 {
-      width: 100%;
+      //width: 100%;
       padding: 0px;
     }
   </style>
