--- a/player.html
+++ b/player.html
@@ -2,8 +2,8 @@
 <head>
   <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/skin/blue.monday/css/jplayer.blue.monday.min.css" rel="stylesheet" />
   <style type="text/css">
-    html {
-      width: 100%;
+    body {
+      width: 438px;
     }
     #jp_container_1 {
       //width: 100%;
