--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<object type="text/html" data="http://carboncook.github.io/player.html"></object>
+<object width="100%" height="100%" type="text/html" data="http://carboncook.github.io/player.html"></object>
