--- a/test.html
+++ b/test.html
@@ -1,1 +1,3 @@
-<object width="100%" height="100%" type="text/html" data="http://carboncook.github.io/player.html"></object>
+<div style="width:480px; height:170px">
+  <object width="100%" height="100%" type="text/html" data="http://carboncook.github.io/player.html"></object>
+</div>
