--- a/player.html
+++ b/player.html
@@ -3,8 +3,11 @@
   <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/skin/blue.monday/css/jplayer.blue.monday.min.css" rel="stylesheet" />
   <style type="text/css">
     #jp_container_1 {
-      //width: 100%;
       padding: 0px;
+    }
+    .jp-controls-holder {
+      width: 100%;
+      top: 0px;
     }
   </style>
 </head>
