--- a/player.html
+++ b/player.html
@@ -12,6 +12,12 @@
     .jp-toggles {
       margin: 0px;
     }
+    .jp-current-time {
+      left: 5px;
+    }
+    .jp-duration {
+      right: 5px;
+    }
   </style>
 </head>
 <body>
