--- a/player.html
+++ b/player.html
@@ -13,10 +13,10 @@
       margin: 0px;
     }
     .jp-current-time {
-      left: 5px;
+      padding-left: 5px;
     }
     .jp-duration {
-      right: 5px;
+      padding-right: 5px;
     }
   </style>
 </head>
