--- a/player.html
+++ b/player.html
@@ -3,15 +3,15 @@
   <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/skin/blue.monday/css/jplayer.blue.monday.min.css" rel="stylesheet" />
   <style type="text/css">
     #jp_container_1 {
-      padding: 0px;
+      margin: 0px;
     }
     .jp-controls-holder {
       width: 100%;
       top: 0px;
-    }
+    }/*
     .jp-toggles {
       margin: 0px;
-    }
+    }*/
     .jp-current-time {
       padding-left: 5px;
     }
