--- a/player.html
+++ b/player.html
@@ -8,10 +8,12 @@
     .jp-controls-holder {
       width: 100%;
       top: 0px;
-    }/*
+    }
     .jp-toggles {
-      margin: 0px;
-    }*/
+      display: inline;
+      float: left;
+      margin: 0;
+    }
     .jp-current-time {
       padding-left: 5px;
     }
