--- a/player.html
+++ b/player.html
@@ -2,17 +2,12 @@
 <head>
   <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/skin/blue.monday/css/jplayer.blue.monday.min.css" rel="stylesheet" />
   <style type="text/css">
-    #jp_container_1 {
-      margin: 0px;
-    }
     .jp-controls-holder {
       width: 100%;
       top: 0px;
     }
-    .jp-toggles {
-      display: inline;
-      float: left;
-      margin: 0;
+    .jp-volume-controls {
+      width: 150px;
     }
     .jp-current-time {
       padding-left: 5px;
