--- a/player.html
+++ b/player.html
@@ -2,12 +2,15 @@
 <head>
   <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/skin/blue.monday/css/jplayer.blue.monday.min.css" rel="stylesheet" />
   <style type="text/css">
+    .jp-audio {
+      margin: auto;
+    }
     .jp-controls-holder {
       width: 100%;
       top: 0px;
     }
     .jp-volume-controls {
-      width: 120px;
+      width: auto;
     }
     .jp-current-time {
       padding-left: 5px;
