--- a/player.html
+++ b/player.html
@@ -81,7 +81,7 @@
         remainingDuration: true,
         toggleDuration: true
       });
-      $(.jp-details).click(function(){
+      $(".jp-details").click(function(){
         alert(player.jPlayer("option", "play"));
       });
     });
