--- a/player.html
+++ b/player.html
@@ -69,9 +69,7 @@
             title: "Bubble",
             m4a: "http://www.jplayer.org/audio/m4a/Miaow-07-Bubble.m4a",
             oga: "http://www.jplayer.org/audio/ogg/Miaow-07-Bubble.ogg"
-          });
-          if (event.jPlayer.status.waitForPlay)
-            $(this).jPlayer("play");
+          }).jPlayer("play");
         },
         cssSelectorAncestor: "#jp_container_1",
         swfPath: "/js",
