--- a/index.html
+++ b/index.html
@@ -1,57 +1,86 @@
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+<!DOCTYPE html>
 <head>
-<title>当我在过假期的时候我在过些什么</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf8" />
-<STYLE type=text/css>* { margin:0; }A:link {. COLOR: #069 ;}
-a{ color:#333; text-decoration:none;}</STYLE>
-</head>
-
-<body bgcolor="#f9fafb" >
-
-<div align="center" bgcolor="#f9fafb" >
-<br><br>
-<table border="1" cellspacing="0" cellpadding="0" width="733" bgcolor="#f9fafb" >
-<tr><td align="center">
-<A HREF=http://blog.sina.com.cn/zhaohanjue target=_blank ><img src=http://p4.sinaimg.cn/1850942555/180/52231403454318 border=0></A>
-</td></tr>
-
-
-<tr><td>
-<a href="index.html" target="_blank"><font size="7"><b><font color="#006699">子追于飞的博客空间</font></b></font></a>&nbsp;
-<A href="http://www5.pidown.info/avzc.html"><font color="red" size=4 ><b>喜欢本站？请<font color="blue" >点我</font>为本站捐款.</b></font></A>
-</td></tr>
-
-<tr><td><br>
-<font color="#808000">精彩博文：</font>
-<a href="http://dstray.tk/Jekyll/index.html" target=_blank><font color="red" ><b> 当月新文</b></font></a>&nbsp;&nbsp;
-<a href="http://we.99bitgongchang.info/00/0714.html" target=_blank><font color="blue" ><b> 往日旧章</b></font></a>&nbsp;&nbsp;
-<a href="http://we.99bitgongchang.info/00/wp.html" target=_blank><font > 精华资源</font></a>&nbsp;&nbsp;
-<a href="http://we.99bitgongchang.info/ad/tono1/sisyc.php" target=_blank > 电影推荐</a>&nbsp;&nbsp;
-<a href="http://we.99bitgongchang.info/00/jd.html" target=_blank><font > 经典作品</font></a>&nbsp;&nbsp;
-<a href="http://51sobt.com/" target=_blank >我要搜索</a>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</td></tr>
-
-<tr><td align="center">
-    <object id="player16699" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="605" height="435">
-	<param name="movie" value="http://b.syy.im/player.swf" />
-	<param name="allowFullScreen" value="true" />
-	<param name="allowScriptAccess" value="always" />
-	<param name="wmode" value="opaque" />
-	<param name="FlashVars" value="plugins=timeslidertooltipplugin-3,http://b.syy.im/pas/proxy.swf&proxy.link=https://picasaweb.google.com/lh/photo/159io0pTA5o0pDczo0pDg2OTU5ODc0OTg2NDgwLzI2P2F1dGhrZXk9!cp0ooCO3Yxc1JnQ05oCOc2lNo0pl!cp0ooCOoYkNxp0ooCOlFFIzYxo0pDo0pwo0pTQ3o0pjgoCONjg2NTkxo0pjIo08O&proxy.image=http://pics.dmm.co.jp/mono/movie/adult/h_068mxgs721/h_068mxgs721pl.jpg&logo.file=http://159i.com/p/wk.png&logo.link=http://159i.com&logo.margin=10&logo.position=bottom-Left&logo.hide=false&logo.margin=15&backcolor=000000&frontcolor=FF9900" />
-	<embed name="player16699" src="http://b.syy.im/player.swf" FlashVars="plugins=timeslidertooltipplugin-3,http://b.syy.im/pas/proxy.swf&proxy.link=https://picasaweb.google.com/lh/photo/159io0pTA5o0pDczo0pDg2OTU5ODc0OTg2NDgwLzI2P2F1dGhrZXk9!cp0ooCO3Yxc1JnQ05oCOc2lNo0pl!cp0ooCOoYkNxp0ooCOlFFIzYxo0pDo0pwo0pTQ3o0pjgoCONjg2NTkxo0pjIo08O&proxy.image=http://pics.dmm.co.jp/mono/movie/adult/h_068mxgs721/h_068mxgs721pl.jpg&logo.file=http://159i.com/p/wk.png&logo.link=http://159i.com&logo.margin=10&logo.position=bottom-Left&logo.hide=false&logo.margin=15&backcolor=000000&frontcolor=FF9900" type="application/x-shockwave-flash" allowfullscreen="true" allowScriptAccess="always" wmode="opaque" width="605" height="435" />
-    </object>
-</td></tr></table>
-
-<script language="JavaScript">
-    function Gotonew() {
-        window.location = "https://github.com/Dstray/";
+  <link type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/skin/blue.monday/css/jplayer.blue.monday.min.css" rel="stylesheet" />
+  <style type="text/css">
+    .jp-audio {
+      margin: auto;
     }
-    setTimeout('Gotonew()', 0);
-</script>
-
+    .jp-controls-holder {
+      width: 100%;
+      top: 0px;
+    }
+    .jp-volume-controls {
+      width: auto;
+    }
+    .jp-current-time {
+      padding-left: 5px;
+    }
+    .jp-duration {
+      padding-right: 5px;
+    }
+  </style>
+</head>
+<body>
+<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+<div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
+  <div class="jp-type-single">
+    <div class="jp-gui jp-interface">
+      <div class="jp-volume-controls">
+        <button class="jp-mute" role="button" tabindex="0">mute</button>
+        <button class="jp-volume-max" role="button" tabindex="0">max volume</button>
+        <div class="jp-volume-bar">
+          <div class="jp-volume-bar-value"></div>
+        </div>
+      </div>
+      <div class="jp-controls-holder">
+        <div class="jp-controls">
+          <button class="jp-play" role="button" tabindex="0">play</button>
+          <button class="jp-stop" role="button" tabindex="0">stop</button>
+        </div>
+        <div class="jp-progress">
+          <div class="jp-seek-bar">
+            <div class="jp-play-bar"></div>
+          </div>
+        </div>
+        <div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
+        <div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
+        <div class="jp-toggles">
+          <button class="jp-repeat" role="button" tabindex="0">repeat</button>
+        </div>
+      </div>
+    </div>
+    <div class="jp-details">
+      <div class="jp-title" aria-label="title">&nbsp;</div>
+    </div>
+    <div class="jp-no-solution">
+      <span>Update Required</span>
+      To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+    </div>
+  </div>
 </div>
 
-</body></html>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jplayer/2.9.2/jplayer/jquery.jplayer.min.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function(){
+      $("#jquery_jplayer_1").jPlayer({
+        ready: function (event) {
+          $(this).jPlayer("setMedia", {
+            title: "七月上",
+            mp3: "https://oqbki5.oloadcdn.net/dl/l/mOIeVGm70Ig/WFfs8t3pZEk/.mp3"
+          }).jPlayer("play");
+        },
+        cssSelectorAncestor: "#jp_container_1",
+        swfPath: "/js",
+        supplied: "m4a, oga",
+        useStateClassSkin: true,
+        autoBlur: false,
+        smoothPlayBar: true,
+        keyEnabled: true,
+        remainingDuration: true,
+        toggleDuration: true
+      });
+    });
+  </script>
+</body>
+</html>
