--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         },
         cssSelectorAncestor: "#jp_container_1",
         swfPath: "/js",
-        supplied: "m4a, oga",
+        supplied: "m4a, oga, mp3",
         useStateClassSkin: true,
         autoBlur: false,
         smoothPlayBar: true,
