--- a/video.html
+++ b/video.html
@@ -5,12 +5,22 @@
 <meta name="description" content="Video">
 </head>
 <body>
-
+<!--
 <div style="max-width: 1280px">
   <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
     <iframe src="https://hawkiit-my.sharepoint.com/personal/xli239_hawkiit_onmicrosoft_com/_layouts/15/embed.aspx?UniqueId=056a2740-2710-4a34-86a1-85743fef0f4e&embed=%7B%22ust%22%3Atrue%2C%22hv%22%3A%22CopyEmbedCode%22%7D&referrer=OneUpFileViewer&referrerScenario=EmbedDialog.Create" width="1280" height="720" frameborder="0" scrolling="no" allowfullscreen title="【小岛浪吹】中国鹰王卢沙野，能否代表中国的外交转向，谈谈多年来中国外交政策的变化 - YouTube.mkv" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe>
   </div>
+</div>-->
+<div style="max-width: 1280px">
+  <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+    <iframe src="https://hawkiit-my.sharepoint.com/:f:/g/personal/xli239_hawkiit_onmicrosoft_com/EnEzR7pn8LZHj1qxyCev2HoBQ-eR9XTWnA_w6d2Aao5okw" width="1280" height="720" frameborder="0" scrolling="no" allowfullscreen title="Video" style="border:none; position: absolute; top: 0; left: 0; right: 0; bottom: 0; height: 100%; max-width: 100%;"></iframe>
+  </div>
 </div>
+
+<script type="text/javascript">
+window.location = "https://hawkiit-my.sharepoint.com/:v:/g/personal/xli239_hawkiit_onmicrosoft_com/EUAnagUQJzRKhqGFdD_vD04BGHf89DEl3A_Hg9lb6V0_Dw"
+</script>
 
 </body>
 </html>
+
